--- a/pom.xml
+++ b/pom.xml
@@ -92,15 +92,15 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <!-- GitHub Models SDK (agregar aquí si tienes los datos reales) -->
-        <!--
         <dependency>
-          <groupId>com.github.tu-org</groupId>
-          <artifactId>models-sdk</artifactId>
-          <version>1.0.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
-        -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.16.0</version>
+        </dependency>
     </dependencies>
 
     <build>
